<resources>
    <string name="app_name">Pet Tracker</string>
    <string name="tv_iniciar_sesion">Iniciar Sesión</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="o_si_ya_tienes_cuenta">O si ya tienes cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="raza">Raza</string>
    <string name="a_o">Año</string>
    <string name="mes">Mes</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="cambiar_imagen">Cambiar imagen</string>
    <string name="anadir_mascota">Anadir mascota</string>
    <string name="ver_seguimiento">Ver seguimiento</string>
    <string name="editar_mascota">Editar mascota</string>
    <string name="cambiar_tema">Cambiar tema</string>
    <string name="cuenta_asociada">Ya hay una cuenta asociada a este correo</string>
    <string name="rellena_campos">Rellena todos los campos</string>
    <string name="cuenta_registrada">Cuenta registrada!</string>
    <string name="error_crear_cuenta">Error al crear la cuenta</string>
    <string name="datos_incorrectos">Datos incorrectos</string>
    <string name="no_hay_cuenta_registrada">No hay una cuenta con ese correo, porfavor registrate</string>
    <string name="anadido_correctamente">\" añadido correctamente\"</string>
    <string name="modificado_correctamente">\" modificado correctamente\"</string>
    <string name="seguro_eliminar">\"Estás seguro que deseas eliminar a \"</string>
    <string name="no_deshacer">Esta acción no se podra deshacer, piensatelo bien.</string>
    <string name="caneclar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="adios">\"Adios \"</string>
    <string name="error_al_eliminar">\"Error al eliminar \"</string>
    <string name="no_se_ha_eliminado_a">\"No se ha eliminado a \"</string>
    <string name="error_cargar_imagen">Error al cargar la imagen</string>
    <string name="error_modificar">Error al modificar</string>
</resources>