<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    tools:context="com.example.Pet_Tracker.Login">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="?attr/textColor"
        app:hintTextColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:hint="@string/correo"
        android:layout_marginLeft="@dimen/veinte"
        android:layout_marginRight="@dimen/veinte">

    <com.google.android.material.textfield.TextInputEditText android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/veinte"
        android:background="@android:color/transparent"
        android:textColor="?attr/textColor"

        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="?attr/textColor"
        app:hintTextColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:hint="@string/contrase_a"
        android:layout_marginLeft="@dimen/veinte"
        android:layout_marginRight="@dimen/veinte">

    <com.google.android.material.textfield.TextInputEditText android:id="@+id/etContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/veinte"
        android:background="@android:color/transparent"
        android:textColor="?attr/textColor"
    />

    </com.google.android.material.textfield.TextInputLayout>

    <Button android:id="@+id/iniciarSesion"
        android:layout_marginTop="@dimen/veinte"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textColor="?attr/textColor"
        android:backgroundTint="?attr/buttonColor"
        />

    <TextView
        android:layout_marginTop="@dimen/veinte"
        android:textSize="@dimen/quince"
        android:textColor="?attr/textColor"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_si_ya_tienes_cuenta"
        />

    <Button android:id="@+id/registrarse"
        android:textColor="?attr/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registrarse"
        android:backgroundTint="?attr/buttonColor"
        />



</LinearLayout>